feat: serve preview playlists and segments
